--- a/main.scss
+++ b/main.scss
@@ -226,21 +226,17 @@ body {
                 height: 3.75rem; // 60px;
                 // width: 210px;
             }
-        
     }
 
     &__header {
-        @extend %btn-1;
         background: $color-purple;
-        color: $color-white;
-        width: 10.625rem; // 170px;
-        height: 3.75rem; // 60px;
-
     }
 
-    &__footer {
-        @extend %btn-1;
+    &__learn-more {
         background: $color-pink;
+    }
+    &__header, &__learn-more {
+        @extend %btn-1;
         color: $color-white;
         width: 10.625rem; // 170px;
         height: 3.75rem; // 60px;
@@ -923,78 +919,20 @@ body {
                 h4, h5, p {
                     visibility: hidden;
                 }
-                width: 25%; // 360px;
-
-
-                // width: 50%;
-                // height: 60%;
-                // padding: 5%;
-                // img {
-                //     margin: 0 1.25rem 9rem 0;
-                //     height: 4rem;
-                //     width: 4rem;
-                // }
-                // h4, h5 {
-                //     width: 7rem; 
-
-                // }
-                // p {
-                //     width: 80%;
-                //     margin-top: 1rem;
-                // }
+                width: 25%; 
             }
-
-            @include breakpoint(lg) {}
-
-            @include breakpoint(xl) {}
         }
 
         &--arrow-left {
-            // margin-bottom: 58px;
             margin-right: 1.25rem; // 20px;
-            // @include breakpoint(xs) {
-            //     height: 90%;
-
-            // }
-            @include breakpoint(xs) {}
-
-            @include breakpoint(sm) {}
-
-            @include breakpoint(md) {}
-
-            @include breakpoint(lg) {}
-
-            @include breakpoint(xl) {}
         }
 
         &--arrow-right {
             margin-right: 3.625rem; // 58px;
-
-            // @include breakpoint(xs) {
-            //     height: 90%;
-            // }
-            @include breakpoint(sm) {}
-
-            @include breakpoint(md) {}
-
-            @include breakpoint(lg) {}
-
-            @include breakpoint(xl) {}
         }
 
         &--icons {
             margin-left: 5.8125rem; // 93px;
-
-            // @include breakpoint(xs) {
-            //     height: 75%;
-            // }
-            @include breakpoint(sm) {}
-
-            @include breakpoint(md) {}
-
-            @include breakpoint(lg) {}
-
-            @include breakpoint(xl) {}
         }
 
         // &--arrows {}
@@ -1041,12 +979,28 @@ body {
         font-size: 1rem; // 16px;
         line-height: 180%;
         letter-spacing: 0.01em;
+        @include breakpoint(xs) {
+            text-align: center;
+        }
     }
 
     &__btn {
         img {
             margin-left: 1.25rem; // 20px;
             vertical-align: middle;
+        }
+        @include breakpoint(sm) {
+
+            // flex-direction: column;
+            // flex-wrap: nowrap;
+            // overflow: visible;
+            // align-items: flex-end;
+            // margin-right: 40px;
+            // flex-direction: column;
+            // flex-wrap: wrap;
+            // overflow: visible;
+            // align-content: right;
+            // width: fit-content;
         }
     }
 
@@ -1056,7 +1010,17 @@ body {
         width: 70%;
         margin: 9.375rem 0 5.5625rem 0; // 150px 0 89px 0;
         justify-content: space-between;
-
+        @include breakpoint(xs) {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        @include breakpoint(sm)
+        {
+            flex-wrap: wrap;
+        }
+        @include breakpoint(md) {
+            flex-wrap: nowrap;
+        }
     }
 
     &__contact {
@@ -1071,7 +1035,9 @@ body {
             line-height: 180%;
             letter-spacing: 0.01em;
             color: $color-black;
-
+            @include breakpoint(xs) {
+                text-align: center;
+            }
         }
 
         &--phone {
@@ -1082,9 +1048,12 @@ body {
             line-height: 180%;
             letter-spacing: 0.01em;
             color: $color-black;
-
+            @include breakpoint(xs) {
+                text-align: center;
+            }
         }
-    }
+
+     }
 
     &__information {
         width: 50%; // 475px;
@@ -1100,6 +1069,7 @@ body {
             margin-right: 1.25rem; // 20px;
             vertical-align: middle;
         }
+
     }
 
     &__logo {
@@ -1139,6 +1109,13 @@ body {
             width: 10rem; // 160px;
 
         }
+        @include breakpoint(xs) {
+            margin-top: 9.375rem; // 65px;
+        }
+        @include breakpoint(md) {
+            width: 55%;
+        }
+
     }
 
     &__trial {
@@ -1161,6 +1138,27 @@ body {
     }
 }
 
+.social {
+    img {
+        @include breakpoint(xs) {
+            margin-top: .5rem;
+            width: 3rem;
+            height: auto;
+        }
+        @include breakpoint(sm) {
+            margin-top: .5rem;
+            width: 3rem;
+            height: auto; 
+        }
+        @include breakpoint(md) {
+            display: flex;
+            justify-content: center;
+            margin-top: .5rem;
+            width: 3rem;
+            height: auto;
+        }
+    }
+}
 .social:not(:last-child) {
     margin-right: 0.875rem; // 14px;
 
