--- a/styles/main.scss
+++ b/styles/main.scss
@@ -329,6 +329,7 @@ body {
     }
 
     // &__logo {}
+
     &__nav {
         @include breakpoint(xs) {
             margin: 0 50% 0 40%;
@@ -353,6 +354,7 @@ body {
 
     // &__paragraph {}
     // &__title {}
+
     &__top {
         display: flex;
         align-items: center;
@@ -535,6 +537,7 @@ body {
         }
 
         // &--btn {}
+
         &--hour-access {
             display: flex;
             flex-wrap: wrap;
@@ -559,6 +562,7 @@ body {
 
             // h3 {}
             // p {}
+
             &--image {
                 margin: 7.6875rem 0; // 123px 0;
                 width: 15.3125rem; // 245px;
@@ -627,10 +631,10 @@ body {
 
         @include breakpoint(xs) {
             height: 58rem;
+            width: 75%;
             background-size: 75%;
             background-position-x: 50%;
             background-position-y: bottom;
-            width: 75%;
             text-align: center;
 
             h2 {
@@ -651,11 +655,25 @@ body {
             background-position-x: 50%;
             background-position-y: bottom;
             text-align: center;
+
+            h2 {
+                margin: 5rem auto 0;
+                width: 60%;
+            }
+
+            p {
+                margin: 2.5rem auto;
+                width: 60%;
+            }
         }
 
         @include breakpoint(md) {
             height: 62rem;
             width: 80%;
+            background-size: 75%;
+            background-position-x: 50%;
+            background-position-y: bottom;
+            text-align: center;
 
             h2 {
                 width: 60%;
@@ -883,7 +901,7 @@ body {
             }
 
             @include breakpoint(xl) {
-                width: 21.25rem; // 360px;
+                width: 21.25rem; 
             }
         }
 
@@ -901,6 +919,7 @@ body {
 
         // &--arrows {}
         // &--image {}
+
         &--nav-icons {
             display: flex;
             flex-wrap: nowrap;
@@ -1148,6 +1167,7 @@ body {
 
 .social:not(:last-child) {
     margin-right: 0.875rem; // 14px;
+    
     // &__facebook {}
     // &__instagram {}
     // &__twitter {}
